# granite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  granite.cabal
.github/workflows/: haskell-ci.yml
app/: GenerateTutorial.hs  Main.hs
docs/: tutorial.md
docs/base/: tutorial.md
src/: Granite.hs
src/Granite/: Chart.hs  Color.hs  Flame.hs  Format.hs  Position.hs  Scale.hs  Spec.hs  Stat.hs  String.hs  Svg.hs
src/Granite/Data/: Frame.hs
src/Granite/Internal/: LegacyChart.hs  Util.hs
src/Granite/Render/: Chrome.hs  Pipeline.hs  Scene.hs  Svg.hs  Terminal.hs
test/: FlameSpec.hs  Golden.hs  GoldenSpec.hs  GraniteSpec.hs  PipelineSpec.hs  PlotlySpec.hs  PositionSpec.hs  RenderSpec.hs  ScaleSpec.hs  SpecPropSpec.hs  StatSpec.hs
test/golden/: bar-basic.txt  box-basic.txt  facet-wrap.txt  hist-basic.txt  line-basic.txt  line-coord-flip.txt  plotly-area-filled.txt  plotly-bar-grouped.txt  plotly-bar-horizontal.txt  plotly-bar-stacked.txt  plotly-density.txt  plotly-distplot.txt  plotly-error-bars.txt  plotly-funnel.txt  plotly-heatmap-annotated.txt  plotly-heatmap.txt  plotly-waterfall.txt  polar-rose.txt  primitives.txt  scatter-basic.txt
