cabal-version:      3.0
name:               granite
version:            0.2.0.2
synopsis:           Easy terminal plotting.
description:        A terminal plotting library for quick and easy visualisation.
license:            MIT
license-file:       LICENSE
author:             Michael Chavinda
maintainer:         mschavinda@gmail.com
copyright:          (c) 2024-2025 Michael Chavinda
bug-reports:        https://github.com/mchav/granite/issues
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md README.md

source-repository head
  type:     git
  location: https://github.com/mchav/granite

common ghc-options
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Winvalid-haddock
        -Wno-unticked-promoted-constructors
        -Wno-unused-do-bind
        -Wpartial-fields
        -Wredundant-constraints
        -Wunused-packages
        -fhide-source-paths
        -funbox-strict-fields

library
    import:           ghc-options
    exposed-modules:  Granite,
                      Granite.String
    build-depends:
        base >=4 && <5,
        text >= 1 && < 3
    hs-source-dirs:   src
    default-language: GHC2021

executable granite
    import:           ghc-options
    main-is:          Main.hs
    build-depends:
        base >=4 && <5,
        granite ^>= 0.2,
        random >= 1.2 && <= 1.3,
        text >= 1 && < 3
    hs-source-dirs:   app
    default-language: GHC2021

test-suite granite-test
    import:           ghc-options
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4 && <5

